--- a/pages/gallery-b.html
+++ b/pages/gallery-b.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="zh-Hant">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -48,93 +49,87 @@
       <!-- 下方一排（或多排）縮圖：桌機固定 4 欄 -->
       <div class="grid">
         <!-- 一張圖 = 一個卡片 -->
-        <a class="card"
-            href="../images/b1.jpg"
-            data-lightbox="b"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/b1.jpg" data-lightbox="b" data-title="
             <strong class='lb-title'>B1｜可愛動畫3D</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>皮克斯/迪士尼風</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>像皮克斯或迪士尼那種可愛的3D動畫風格，眼睛大大的，看起來很討喜。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Pixar Style, Disney Style, Cute 3D Character</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 大眼、圓臉、柔光、皮膚平滑</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> big eyes, soft lighting, smooth skin, cute proportions</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> realistic human, scary, low poly, rough texture</span>
-            ">        
+            ">
             <img src="../images/b1.jpg" alt="B1｜可愛動畫3D">
-            <div class="cap">B1｜可愛動畫3D</div>
-        </a>
-        <a class="card"
-            href="../images/b2.jpg"
-            data-lightbox="b"
-            data-title="
+          </a>
+          <div class="cap">B1｜可愛動畫3D</div>
+          <div class="desc">像皮克斯或迪士尼那種可愛的3D動畫風格，眼睛大大的，看起來很討喜。</div>
+        </div>
+        <div class="card"><a class="card-link" href="../images/b2.jpg" data-lightbox="b" data-title="
             <strong class='lb-title'>B2｜商業動畫3D</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>商業動畫電影風</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 像《小小兵》那種商業動畫電影的風格，色彩很鮮豔明亮，看起來很有質感。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> 3D Animation Film Style, Illumination Style</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 明亮、商業感、適合 IP</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> cinematic lighting, vibrant color, animation quality</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> dark horror, photorealistic skin</span>
-            ">        
+            ">
             <img src="../images/b2.jpg" alt="B2｜商業動畫3D">
-            <div class="cap">B2｜商業動畫3D</div>
-        </a>
-        <a class="card"
-            href="../images/b3.jpg"
-            data-lightbox="b"
-            data-title="
+          </a>
+          <div class="cap">B2｜商業動畫3D</div>
+          <div class="desc">像《小小兵》那種商業動畫電影的風格，色彩很鮮豔明亮，看起來很有質感。</div>
+        </div>
+        <div class="card"><a class="card-link" href="../images/b3.jpg" data-lightbox="b" data-title="
             <strong class='lb-title'>B3｜公仔模型風</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>公仔模型</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 看起來像塑膠玩具公仔的照片，有點反光，比例比較誇張可愛。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Toy Figure Style, Vinyl Toy</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 塑膠質感、比例誇張</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> vinyl texture, toy proportions, glossy surface</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> realistic skin, cloth texture</span>
-            ">        
+            ">
             <img src="../images/b3.jpg" alt="B3｜公仔模型風">
-            <div class="cap">B3｜公仔模型風</div>
-        </a>
-        <a class="card"
-            href="../images/b4.jpg"
-            data-lightbox="b"
-            data-title="
+          </a>
+          <div class="cap">B3｜公仔模型風</div>
+          <div class="desc">看起來像塑膠玩具公仔的照片，有點反光，比例比較誇張可愛。</div>
+        </div>
+        <div class="card"><a class="card-link" href="../images/b4.jpg" data-lightbox="b" data-title="
             <strong class='lb-title'>B4｜遊戲角色3D</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>遊戲角色風</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 像電玩角色的 3D 人物，光影效果很強烈。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Game Character 3D, Unreal Engine</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 光影強、角色帥氣</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> unreal engine, high detail armor, dramatic lighting</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> cartoon style, flat shading</span>
-            ">        
+            ">
             <img src="../images/b4.jpg" alt="B4｜遊戲角色3D">
-            <div class="cap">B4｜遊戲角色3D</div>
-        </a>
-        <a class="card"
-            href="../images/b5.jpg"
-            data-lightbox="b"
-            data-title="
+          </a>
+          <div class="cap">B4｜遊戲角色3D</div>
+          <div class="desc">像電玩角色的 3D 人物，光影效果很強烈。</div>
+        </div>
+        <div class="card"><a class="card-link" href="../images/b5.jpg" data-lightbox="b" data-title="
             <strong class='lb-title'>B5｜偏真人像3D</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>3D 半寫實</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 看起來像真人但又有點美化的3D角色，皮膚和質感很細緻。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Stylized Realism 3D, 3D Render</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 真實但仍有美化</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> studio lighting, realistic texture, soft skin</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> cartoon eyes, plastic skin, low resolution</span>
-            ">        
+            ">
             <img src="../images/b5.jpg" alt="B5｜偏真人像3D">
-            <div class="cap">B5｜偏真人像3D</div>
-        </a>
-        <a class="card"
-            href="../images/b6.jpg"
-            data-lightbox="b"
-            data-title="
+          </a>
+          <div class="cap">B5｜偏真人像3D</div>
+          <div class="desc">看起來像真人但又有點美化的3D角色，皮膚和質感很細緻。</div>
+        </div>
+        <div class="card"><a class="card-link" href="../images/b6.jpg" data-lightbox="b" data-title="
             <strong class='lb-title'>B6｜卡通Q版3D</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>Q版立體卡通</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 看那種頭大身體小的Q版3D卡通人物，看起來很可愛、圓滾滾的。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Chibi 3D, Cute 3D</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 頭大身小、可愛</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> chibi proportions, cute style, bright colors</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> realistic anatomy, horror</span>
-            ">        
+            ">
             <img src="../images/b6.jpg" alt="B6｜卡通Q版3D">
-            <div class="cap">B6｜卡通Q版3D</div>
-        </a>
+          </a>
+          <div class="cap">B6｜卡通Q版3D</div>
+          <div class="desc">看那種頭大身體小的Q版3D卡通人物，看起來很可愛、圓滾滾的。</div>
+        </div>
       </div>
 
-      </div>
+    </div>
     </div>
   </section>
 
@@ -145,7 +140,7 @@
       </div>
     </div>
   </footer>
- <!-- ✅ 1) 先載入 jQuery（Lightbox2 常需要） -->
+  <!-- ✅ 1) 先載入 jQuery（Lightbox2 常需要） -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 
   <!-- ✅ 2) 再載入 Lightbox2 -->
@@ -163,7 +158,7 @@
     }
 
     if (window.lightbox) {
-    lightbox.option({
+      lightbox.option({
         resizeDuration: 200,
         fadeDuration: 200,
         imageFadeDuration: 200,
@@ -173,8 +168,9 @@
         /* 核心重點 */
         maxWidth: 800,
         maxHeight: 500
-    });
+      });
     }
-</script>
+  </script>
 </body>
+
 </html>
