--- a/pages/gallery-c.html
+++ b/pages/gallery-c.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="zh-Hant">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -48,161 +49,151 @@
       <!-- 下方一排（或多排）縮圖：桌機固定 4 欄 -->
       <div class="grid">
         <!-- 一張圖 = 一個卡片 -->
-        <a class="card"
-            href="../images/c1.jpg"
-            data-lightbox="c"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/c1.jpg" data-lightbox="c" data-title="
             <strong class='lb-title'>C1｜日系賽璐珞</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>日系動畫風</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>【日系賽璐珞】風格，經典的日系動畫風格，線條很乾淨，顏色是一塊一塊的，像動畫截圖。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Anime Style, Cel Shading</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 色塊清楚、線條乾淨</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> cel shading, anime character, clean lineart</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> photorealism, oil painting</span>
-            ">        
+            ">
             <img src="../images/c1.jpg" alt="C1｜日系賽璐珞">
-            <div class="cap">C1｜日系賽璐珞</div>
-        </a>
+          </a>
+          <div class="cap">C1｜日系賽璐珞</div>
+          <div class="desc">經典的日系動畫風格，線條很乾淨，顏色是一塊一塊的，像動畫截圖。</div>
+        </div>
 
-        <a class="card"
-            href="../images/c2.jpg"
-            data-lightbox="c"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/c2.jpg" data-lightbox="c" data-title="
             <strong class='lb-title'>C2｜動漫天空背景</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>動漫天空背景</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 像新海誠動畫裡那種背景，天空和光影非常漂亮、夢幻，細節很多。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Makoto Shinkai Style, Anime Background</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 天空、光影細膩</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> dramatic sky, glowing light, clouds</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> flat design, cartoon sky</span>
-            ">        
+            ">
             <img src="../images/c2.jpg" alt="C2｜動漫天空背景">
-            <div class="cap">C2｜動漫天空背景</div>
-        </a>
+          </a>
+          <div class="cap">C2｜動漫天空背景</div>
+          <div class="desc">經典的日系動畫風格，線條很乾淨，顏色是一塊一塊的，像動畫截圖。</div>
+        </div>
 
-        <a class="card"
-            href="../images/c3_1.jpg"
-            data-lightbox="c"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/c3_1.jpg" data-lightbox="c" data-title="
             <strong class='lb-title'>C3｜韓系條漫</strong>
             <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>Webtoon 風格</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Webtoon Style, Digital Manhwa</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 直式閱讀、彩色線條</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> vertical composition, clean shading</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> black and white manga</span>
-            ">        
+            ">
             <img src="../images/c3.jpg" alt="C3｜韓系條漫">
-            <div class="cap">C3｜韓系條漫</div>
-        </a>
+          </a>
+          <div class="cap">C3｜韓系條漫</div>
+          <div class="desc">韓劇感的彩色條漫畫風，，顏色比較鮮豔，線條很乾淨現代。</div>
+        </div>
 
-        <a class="card"
-            href="../images/c4.jpg"
-            data-lightbox="c"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/c4.jpg" data-lightbox="c" data-title="
             <strong class='lb-title'>C4｜日式黑白漫畫</strong>
             <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>日式黑白漫畫</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Black and White Manga</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 網點、高對比</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> screentone, high contrast</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> color, watercolor</span>
-            ">        
+            ">
             <img src="../images/c4.jpg" alt="C4｜日式黑白漫畫">
-            <div class="cap">C4｜日式黑白漫畫</div>
-        </a>
+          </a>
+          <div class="cap">C4｜日式黑白漫畫</div>
+           <div class="desc">傳統的黑白日本漫畫風格，有墨線和網點，對比比較強烈。</div>
+       </div>
 
-        <a class="card"
-            href="../images/c5.jpg"
-            data-lightbox="c"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/c5.jpg" data-lightbox="c" data-title="
             <strong class='lb-title'>C5｜漫畫速寫</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>日漫草稿</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 像漫畫家隨手畫的草稿，線條比較隨意、粗糙，沒有完稿的感覺。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Manga Sketch</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 粗線、不完稿感</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> rough sketch, pencil lines</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> polished illustration</span>
-            ">        
-            <img src="../images/c5.jpg" alt="C5｜日漫草稿">
-            <div class="cap">C5｜日漫草稿</div>
-        </a>
+            ">
+            <img src="../images/c5.jpg" alt="C5｜漫畫速寫">
+          </a>
+          <div class="cap">C5｜漫畫速寫</div>
+           <div class="desc">像漫畫家隨手畫的草稿，線條比較隨意、粗糙，沒有完稿的感覺。</div>
+        </div>
 
-        <a class="card"
-            href="../images/c6.jpg"
-            data-lightbox="c"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/c6.jpg" data-lightbox="c" data-title="
             <strong class='lb-title'>C6｜氛圍動漫</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>Lo-fi 動漫</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 那種有點復古、模糊的動漫截圖，強調氣氛和情緒，不強調細節清晰。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Lofi Anime, Anime Screenshot</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 情緒感重於細節</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> moody lighting, soft blur</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> ultra sharp, hyper detail</span>
-            ">        
+            ">
             <img src="../images/c6.jpg" alt="C6｜Lo-fi 動漫">
-            <div class="cap">C6｜Lo-fi 動漫</div>
-        </a>
+          </a>
+          <div class="cap">C6｜氛圍動漫</div>
+          <div class="desc">那種有點復古、模糊的動漫截圖，強調氣氛和情緒，不強調細節清晰。</div>
+        </div>
 
-        <a class="card"
-            href="../images/c7.jpg"
-            data-lightbox="c"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/c7.jpg" data-lightbox="c" data-title="
             <strong class='lb-title'>C7｜半寫實厚塗</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>厚塗動漫</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 五官精緻、偏寫實的動漫風，畫得比較精緻的動漫風格，五官比較立體寫實，顏色是用厚塗的方式畫上去的。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Semi-realistic Anime, Digital Painting</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 精緻五官、柔光</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> painterly, soft shading, detailed face</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> cartoon face, flat shading</span>
-            ">        
+            ">
             <img src="../images/c7.jpg" alt="C7｜半寫實厚塗">
-            <div class="cap">C7｜半寫實厚塗</div>
-        </a>
+          </a>
+          <div class="cap">C7｜半寫實厚塗</div>
+          <div class="desc">五官精緻、偏寫實的動漫風，畫得比較精緻的動漫風格，五官比較立體寫實，顏色是用厚塗的方式畫上去的。</div>
+        </div>
 
-        <a class="card"
-            href="../images/c8.jpg"
-            data-lightbox="c"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/c8.jpg" data-lightbox="c" data-title="
             <strong class='lb-title'>C8｜美式漫畫</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>復古美漫</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 復古的美式漫畫風格，線條很粗獷，顏色有時候會有印刷的網點感。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Retro Comic, Pop Art</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 網點、印刷感</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> halftone dots, bold lines</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> anime style</span>
-            ">        
+            ">
             <img src="../images/c8.jpg" alt="C8｜日系賽璐珞">
-            <div class="cap">C8｜日系賽璐珞</div>
-        </a>
+          </a>
+          <div class="cap">C8｜美式漫畫</div>
+          <div class="desc">復古的美式漫畫風格，線條很粗獷，顏色有時候會有印刷的網點感。</div>
+        </div>
 
-        <a class="card"
-            href="../images/c9.jpg"
-            data-lightbox="c"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/c9.jpg" data-lightbox="c" data-title="
             <strong class='lb-title'>C9｜圖文小說</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>圖文小說</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 像歐美圖文小說的畫面，比較嚴肅、寫實一點的圖文小說風格，光影對比比較強，有墨線感。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Graphic Novel Style</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 偏寫實構圖</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> dramatic lighting, ink outlines</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> chibi, cute cartoon</span>
-            ">        
+            ">
             <img src="../images/c9.jpg" alt="C9｜圖文小說">
-            <div class="cap">C9｜圖文小說</div>
-        </a>
+          </a>
+          <div class="cap">C9｜圖文小說</div>
+          <div class="desc">像歐美圖文小說的畫面，比較嚴肅、寫實一點的圖文小說風格，光影對比比較強，有墨線感。</div>
+        </div>
 
-        <a class="card"
-            href="../images/c10.jpg"
-            data-lightbox="c"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/c10.jpg" data-lightbox="c" data-title="
             <strong class='lb-title'>C10｜極簡漫畫</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>線條漫畫</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 用很少的線條畫出來的漫畫，風格非常簡單乾淨，沒有太多細節。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Minimalist Comic</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 線條極簡</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> simple lines, minimal style</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> heavy texture, painting</span>
-            ">        
+            ">
             <img src="../images/c10.jpg" alt="C10｜極簡漫畫珞">
-            <div class="cap">C10｜極簡漫畫</div>
-        </a>
+          </a>
+          <div class="cap">C10｜極簡漫畫</div>
+          <div class="desc">用很少的線條畫出來的漫畫，風格非常簡單乾淨，沒有太多細節。</div>
+        </div>
 
       </div>
 
 
-        <!-- 需要第二排就繼續貼 -->
-      </div>
+      <!-- 需要第二排就繼續貼 -->
+    </div>
     </div>
   </section>
 
@@ -213,7 +204,7 @@
       </div>
     </div>
   </footer>
- <!-- ✅ 1) 先載入 jQuery（Lightbox2 常需要） -->
+  <!-- ✅ 1) 先載入 jQuery（Lightbox2 常需要） -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 
   <!-- ✅ 2) 再載入 Lightbox2 -->
@@ -231,7 +222,7 @@
     }
 
     if (window.lightbox) {
-    lightbox.option({
+      lightbox.option({
         resizeDuration: 200,
         fadeDuration: 200,
         imageFadeDuration: 200,
@@ -241,8 +232,9 @@
         /* 核心重點 */
         maxWidth: 800,
         maxHeight: 500
-    });
+      });
     }
-</script>
+  </script>
 </body>
+
 </html>
