--- a/pages/gallery-d.html
+++ b/pages/gallery-d.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="zh-Hant">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -28,134 +29,127 @@
       </div>
     </div>
 
-  <!-- 上方大區塊（如附圖2 上半部留空區） -->
-  <section class="hero">
-    <div class="container">
-      <div class="box">
-        <h1>D. 插畫與平面設計</h1>
-        <p>Illustration & Flat Design</p>
-        <dl>
-          <dt>特徵：</dt>
-          <dd>扁平、資訊清楚、構圖乾淨，適合商業與教學。</dd>
-          <dt>用途：</dt>
-          <dd>簡報、網站、貼圖、教學圖解。</dd>
-        </dl>
-      </div>
+    <!-- 上方大區塊（如附圖2 上半部留空區） -->
+    <section class="hero">
+      <div class="container">
+        <div class="box">
+          <h1>D. 插畫與平面設計</h1>
+          <p>Illustration & Flat Design</p>
+          <dl>
+            <dt>特徵：</dt>
+            <dd>扁平、資訊清楚、構圖乾淨，適合商業與教學。</dd>
+            <dt>用途：</dt>
+            <dd>簡報、網站、貼圖、教學圖解。</dd>
+          </dl>
+        </div>
 
-      <div class="section-line"></div>
+        <div class="section-line"></div>
 
-      <!-- 下方一排（或多排）縮圖：桌機固定 4 欄 -->
-      <div class="grid">
-        <!-- 一張圖 = 一個卡片 -->
-        <a class="card"
-            href="../images/d1.jpg"
-            data-lightbox="d"
-            data-title="
+        <!-- 下方一排（或多排）縮圖：桌機固定 4 欄 -->
+        <div class="grid">
+          <!-- 一張圖 = 一個卡片 -->
+          <div class="card"><a class="card-link" href="../images/d1.jpg" data-lightbox="d" data-title="
             <strong class='lb-title'>D1｜扁平插畫</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>扁平插畫</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 扁平風格的插畫，扁平風格的插畫，沒有陰影和立體感，形狀幾何簡單，背景乾淨。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Flat Vector Illustration</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 幾何、簡單</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> white background, simple shapes</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> realistic lighting, texture</span>
-            ">        
-            <img src="../images/d1.jpg" alt="D1｜扁平插畫">
+            ">
+              <img src="../images/d1.jpg" alt="D1｜扁平插畫">
+            </a>
             <div class="cap">D1｜扁平插畫</div>
-        </a>
+          <div class="desc">扁平風格的插畫，扁平風格的插畫，沒有陰影和立體感，形狀幾何簡單，背景乾淨。</div>
+          </div>
 
-        <a class="card"
-            href="../images/d2.jpg"
-            data-lightbox="d"
-            data-title="
+          <div class="card"><a class="card-link" href="../images/d2.jpg" data-lightbox="d" data-title="
             <strong class='lb-title'>D2｜Memphis 風</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>Memphis 風</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 科技公司常見的幾何插畫，人物手腳比例誇張，有很多幾何圖形裝飾。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Corporate Memphis</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 幾何、簡單</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> white background, simple shapes</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> realistic lighting, texture</span>
-            ">        
-            <img src="../images/d2.jpg" alt="D2｜Memphis 風">
+            ">
+              <img src="../images/d2.jpg" alt="D2｜Memphis 風">
+            </a>
             <div class="cap">D2｜Memphis 風</div>
-        </a>
+            <div class="desc">科技公司常見的幾何插畫，人物手腳比例誇張，有很多幾何圖形裝飾。</div>
+          </div>
 
-        <a class="card"
-            href="../images/d3.jpg"
-            data-lightbox="d"
-            data-title="
+          <div class="card"><a class="card-link" href="../images/d3.jpg" data-lightbox="d" data-title="
             <strong class='lb-title'>D3｜商務插畫</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>商務插畫</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 簡報或企業網站用的插畫，適合用在簡報裡的商務風格插畫，人物看起來專業，場景通常是辦公室。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Business Illustration, Flat Design</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 辦公室情境</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> office scene, flat design</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> cartoon childish</span>
-            ">        
-            <img src="../images/d3.jpg" alt="D3｜商務插畫">
+            ">
+              <img src="../images/d3.jpg" alt="D3｜商務插畫">
+            </a>
             <div class="cap">D3｜商務插畫</div>
-        </a>
+            <div class="desc">簡報或企業網站用的插畫，適合用在簡報裡的商務風格插畫，人物看起來專業，場景通常是辦公室。</div>
+          </div>
 
-        <a class="card"
-            href="../images/d4.jpg"
-            data-lightbox="d"
-            data-title="
+          <div class="card"><a class="card-link" href="../images/d4.jpg" data-lightbox="d" data-title="
             <strong class='lb-title'>D4｜數位插畫</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>數位插畫</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 代感的數位插畫，線條乾淨流暢，色彩鮮明，看起來很時尚。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Digital Illustration, Vector Art</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 現代、乾淨</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> clean lines, vector shapes</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> sketch, oil painting</span>
-            ">        
-            <img src="../images/d4.jpg" alt="D4｜數位插畫">
+            ">
+              <img src="../images/d4.jpg" alt="D4｜數位插畫">
+            </a>
             <div class="cap">D4｜數位插畫</div>
-        </a>
+            <div class="desc">現代感的數位插畫，線條乾淨流暢，色彩鮮明，看起來很時尚。</div>
+          </div>
 
-        <a class="card"
-            href="../images/d5.jpg"
-            data-lightbox="d"
-            data-title="
+          <div class="card"><a class="card-link" href="../images/d5.jpg" data-lightbox="d" data-title="
             <strong class='lb-title'>D5｜場景扁平</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>場景扁平</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 像資訊圖表的場景插畫，扁平風格的風景插畫，用不同顏色的色塊疊出前後層次感。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Flat Scene, Vector Landscape</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 分層構圖</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> layered shapes, flat perspective</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> photorealism</span>
-            ">        
-            <img src="../images/d5.jpg" alt="D5｜場景扁平">
+            ">
+              <img src="../images/d5.jpg" alt="D5｜場景扁平">
+            </a>
             <div class="cap">D5｜扁平插畫</div>
-        </a>
+            <div class="desc">像資訊圖表的場景插畫，扁平風格的風景插畫，用不同顏色的色塊疊出前後層次感。</div>
+          </div>
 
-        <a class="card"
-            href="../images/d6.jpg"
-            data-lightbox="d"
-            data-title="
+          <div class="card"><a class="card-link" href="../images/d6.jpg" data-lightbox="d" data-title="
             <strong class='lb-title'>D6｜貼圖 icon</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>貼圖 icon</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 像 Line 貼圖那樣的插畫，圖案邊緣有白邊，看起來像一張貼紙。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Sticker Style, Vector Icon</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 要白邊、貼紙感</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> die-cut, bold outline</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> no outline, realistic texture</span>
-            ">        
-            <img src="../images/d6.jpg" alt="D6｜貼圖 icon">
+            ">
+              <img src="../images/d6.jpg" alt="D6｜貼圖 icon">
+            </a>
             <div class="cap">D6｜貼圖 icon</div>
-        </a>
+            <div class="desc">像 Line 貼圖那樣的插畫，圖案邊緣有白邊，看起來像一張貼紙。</div>
+          </div>
 
-        <a class="card"
-            href="../images/d7.jpg"
-            data-lightbox="d"
-            data-title="
+          <div class="card"><a class="card-link" href="../images/d7.jpg" data-lightbox="d" data-title="
             <strong class='lb-title'>D7｜線條塗鴉</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>線條塗鴉</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 用簡單的線條畫出來的圖，像隨手塗鴉一樣，沒有填顏色。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Simple Line Art</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 線條乾淨</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> minimal lines, outline</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> heavy shading, color mess</span>
-            ">        
-            <img src="../images/d7.jpg" alt="D7｜線條塗鴉">
+            ">
+              <img src="../images/d7.jpg" alt="D7｜線條塗鴉">
+            </a>
             <div class="cap">D7｜線條塗鴉</div>
-        </a>
-  </div>
+            <div class="desc">用簡單的線條畫出來的圖，像隨手塗鴉一樣，沒有填顏色。</div>
+          </div>
+        </div>
       </div>
 
-      </div>
-    </div>
+  </div>
+  </div>
   </section>
 
   <footer class="footer">
@@ -165,7 +159,7 @@
       </div>
     </div>
   </footer>
- <!-- ✅ 1) 先載入 jQuery（Lightbox2 常需要） -->
+  <!-- ✅ 1) 先載入 jQuery（Lightbox2 常需要） -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 
   <!-- ✅ 2) 再載入 Lightbox2 -->
@@ -183,7 +177,7 @@
     }
 
     if (window.lightbox) {
-    lightbox.option({
+      lightbox.option({
         resizeDuration: 200,
         fadeDuration: 200,
         imageFadeDuration: 200,
@@ -193,8 +187,9 @@
         /* 核心重點 */
         maxWidth: 800,
         maxHeight: 500
-    });
+      });
     }
-</script>
+  </script>
 </body>
+
 </html>
