--- a/pages/gallery-f.html
+++ b/pages/gallery-f.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="zh-Hant">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -48,70 +49,66 @@
       <!-- 下方一排（或多排）縮圖：桌機固定 4 欄 -->
       <div class="grid">
         <!-- 一張圖 = 一個卡片 -->
-        <a class="card"
-            href="../images/f1.jpg"
-            data-lightbox="f"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/f1.jpg" data-lightbox="f" data-title="
             <strong class='lb-title'>F1｜中國古風畫</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>中國古風畫</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 中國傳統的工筆畫古典風格，線條畫得很細緻典雅，顏色淡淡的。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Chinese Gongbi Painting</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 細線、典雅</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> fine brushwork, elegant</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> cartoon, anime</span>
-            ">        
+            ">
             <img src="../images/f1.jpg" alt="F1｜中國古風畫">
-            <div class="cap">F1｜中國古風畫</div>
-        </a>
+          </a>
+          <div class="cap">F1｜中國古風畫</div>
+          <div class="desc">中國傳統的工筆畫古典風格，線條畫得很細緻典雅，顏色淡淡的。</div>
+        </div>
 
-        <a class="card"
-            href="../images/f2.jpg"
-            data-lightbox="f"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/f2.jpg" data-lightbox="f" data-title="
             <strong class='lb-title'>F2｜水墨風插畫</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>水墨風插畫</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 用水墨畫風格畫的插畫或漫畫，只有黑白和墨色深淺的變化，有暈染感。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Chinese Ink Wash</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 墨色暈染</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> ink texture, flowing strokes</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> flat color, vector</span>
-            ">        
+            ">
             <img src="../images/f2.jpg" alt="F2｜水墨風插畫">
-            <div class="cap">F2｜水墨風插畫</div>
-        </a>
+          </a>
+          <div class="cap">F2｜水墨風插畫</div>
+          <div class="desc">用水墨畫風格畫的插畫或漫畫，只有黑白和墨色深淺的變化，有暈染感。</div>
+        </div>
 
-        <a class="card"
-            href="../images/f3.jpg"
-            data-lightbox="f"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/f3.jpg" data-lightbox="f" data-title="
             <strong class='lb-title'>F3｜國潮插畫</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>國潮插畫</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 結合傳統中國元素和現代設計的「國潮」風格，色彩比較大膽新潮。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Guochao Style</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 傳統＋現代</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> modern chinese, cultural motifs</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> western cartoon</span>
-            ">        
+            ">
             <img src="../images/f3.jpg" alt="F3｜國潮插畫">
-            <div class="cap">F3｜國潮插畫</div>
-        </a>
+          </a>
+          <div class="cap">F3｜國潮插畫</div>
+          <div class="desc">結合傳統中國元素和現代設計的「國潮」風格，色彩比較大膽新潮。</div>
+        </div>
 
-        <a class="card"
-            href="../images/f4.jpg"
-            data-lightbox="f"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/f4.jpg" data-lightbox="f" data-title="
             <strong class='lb-title'>F4｜古風愛情插畫</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>古風愛情插畫</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 中式古裝、唯美插畫風，古風言情小說封面的那種風格，人物畫得很唯美，氣氛很浪漫柔和。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Ancient Chinese Romance</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 情感柔美</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> romantic, soft light</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> dark horror</span>
-            ">        
+            ">
             <img src="../images/f4.jpg" alt="F4｜古風愛情插畫">
-            <div class="cap">F4｜古風愛情插畫</div>
-        </a>
+          </a>
+          <div class="cap">F4｜古風愛情插畫</div>
+          <div class="desc">中式古裝、唯美插畫風，古風言情小說封面的那種風格，人物畫得很唯美，氣氛很浪漫柔和。</div>
+        </div>
 
       </div>
 
 
-      </div>
+    </div>
     </div>
   </section>
 
@@ -122,7 +119,7 @@
       </div>
     </div>
   </footer>
- <!-- ✅ 1) 先載入 jQuery（Lightbox2 常需要） -->
+  <!-- ✅ 1) 先載入 jQuery（Lightbox2 常需要） -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 
   <!-- ✅ 2) 再載入 Lightbox2 -->
@@ -140,7 +137,7 @@
     }
 
     if (window.lightbox) {
-    lightbox.option({
+      lightbox.option({
         resizeDuration: 200,
         fadeDuration: 200,
         imageFadeDuration: 200,
@@ -150,8 +147,9 @@
         /* 核心重點 */
         maxWidth: 800,
         maxHeight: 500
-    });
+      });
     }
-</script>
+  </script>
 </body>
+
 </html>
