--- a/pages/gallery-e.html
+++ b/pages/gallery-e.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="zh-Hant">
+
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -48,69 +49,65 @@
       <!-- 下方一排（或多排）縮圖：桌機固定 4 欄 -->
       <div class="grid">
         <!-- 一張圖 = 一個卡片 -->
-        <a class="card"
-            href="../images/e1.jpg"
-            data-lightbox="e"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/e1.jpg" data-lightbox="e" data-title="
             <strong class='lb-title'>E1｜繪本卡通</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>繪本卡通</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 像兒童繪本裡的卡通風格，造型可愛圓潤，顏色看起來很溫暖柔和。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Children’s Book Illustration</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 可愛、柔色</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> warm colors, soft outlines</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> dark tone, horror</span>
-            ">        
+            ">
             <img src="../images/e1.jpg" alt="E1｜繪本卡通">
-            <div class="cap">E1｜繪本卡通</div>
-        </a>
+          </a>
+          <div class="cap">E1｜繪本卡通</div>
+          <div class="desc">像兒童繪本裡的卡通風格，造型可愛圓潤，顏色看起來很溫暖柔和。</div>
+        </div>
 
-        <a class="card"
-            href="../images/e2.jpg"
-            data-lightbox="e"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/e2.jpg" data-lightbox="e" data-title="
             <strong class='lb-title'>E2｜水彩插畫</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>水彩插畫</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 有水彩暈染感的插畫，看得到紙張的紋路。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Watercolor Illustration</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 紙張暈染感</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> watercolor wash, paper texture</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> digital sharp edges</span>
-            ">        
+            ">
             <img src="../images/e2.jpg" alt="E2｜水彩插畫">
-            <div class="cap">E2｜水彩插畫</div>
-        </a>
+          </a>
+          <div class="cap">E2｜水彩插畫</div>
+          <div class="desc">有水彩暈染感的插畫，看得到紙張的紋路。</div>
+        </div>
 
-        <a class="card"
-            href="../images/e3.jpg"
-            data-lightbox="e"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/e3.jpg" data-lightbox="e" data-title="
             <strong class='lb-title'>E3｜色鉛筆手繪</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>色鉛筆手繪</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 用色鉛筆手繪的風格，看得到一筆一筆的筆觸和紙張的質感。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Colored Pencil Drawing</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 筆觸明顯</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> pencil strokes, hand drawn</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> vector, smooth surface</span>
-            ">        
+            ">
             <img src="../images/e3.jpg" alt="E3｜色鉛筆手繪">
-            <div class="cap">E3｜色鉛筆手繪</div>
-        </a>
+          </a>
+          <div class="cap">E3｜色鉛筆手繪</div>
+          <div class="desc">用色鉛筆手繪的風格，看得到一筆一筆的筆觸和紙張的質感。</div>
+        </div>
 
-        <a class="card"
-            href="../images/e4.jpg"
-            data-lightbox="e"
-            data-title="
+        <div class="card"><a class="card-link" href="../images/e4.jpg" data-lightbox="e" data-title="
             <strong class='lb-title'>E4｜溫馨插畫</strong>
-            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'>溫馨插畫</span><br>
+            <span class='lb-label'>畫風（中文）：</span><span class='lb-text'> 那種讓人看了覺得心裡暖暖的插畫風格，光線柔和，充滿情感，有故事感的插畫。</span><br>
             <span class='lb-label'>畫風關鍵詞（英文）：</span><span class='lb-text'> Warm Storybook Style</span><br>
             <span class='lb-label'>注意事項：</span><span class='lb-text'> 情感優先</span><br>
             <span class='lb-label'>Prompt 建議：</span><span class='lb-text'> cozy, soft light</span><br>
             <span class='lb-label'>Negative：</span><span class='lb-text'> cold, industrial</span>
-            ">        
+            ">
             <img src="../images/e4.jpg" alt="E4｜溫馨插畫">
-            <div class="cap">E4｜溫馨插畫</div>
-        </a>
+          </a>
+          <div class="cap">E4｜溫馨插畫</div>
+          <div class="desc">那種讓人看了覺得心裡暖暖的插畫風格，光線柔和，充滿情感，有故事感的插畫。</div>
+        </div>
 
 
       </div>
-      </div>
+    </div>
     </div>
   </section>
 
@@ -121,7 +118,7 @@
       </div>
     </div>
   </footer>
- <!-- ✅ 1) 先載入 jQuery（Lightbox2 常需要） -->
+  <!-- ✅ 1) 先載入 jQuery（Lightbox2 常需要） -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
 
   <!-- ✅ 2) 再載入 Lightbox2 -->
@@ -139,7 +136,7 @@
     }
 
     if (window.lightbox) {
-    lightbox.option({
+      lightbox.option({
         resizeDuration: 200,
         fadeDuration: 200,
         imageFadeDuration: 200,
@@ -149,8 +146,9 @@
         /* 核心重點 */
         maxWidth: 800,
         maxHeight: 500
-    });
+      });
     }
-</script>
+  </script>
 </body>
+
 </html>
